add function examples

--- a/Python-Intro.ipynb
+++ b/Python-Intro.ipynb
@@ -519,8 +519,178 @@
    ],
    "source": [
     "j['b'] = 5\n",
+    "# Note that j['b'] is changed in both places: it must be a reference inside d!\n",
     "print(j)\n",
     "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "database = [\n",
+    "    {\n",
+    "        \"id\": 1,\n",
+    "        \"name\": \"person 1\"\n",
+    "    },{\n",
+    "        \"id\": 2,\n",
+    "        \"name\": \"person 2\"\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "database[0]\n",
+    "database[0]['id']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def myFunction(param1, param2):\n",
+    "    print(f\"Got parameters {param1} and {param2}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Got parameters 4 and [{'id': 1, 'name': 'person 1'}, {'id': 2, 'name': 'person 2'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "myFunction(4,database)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def double(arr):\n",
+    "    return [i*2 for i in arr]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100, 121, 144, 169, 196, 225, 256, 289, 324, 361]\n",
+      "[2, 8, 18, 32, 50, 72, 98, 128, 162, 200, 242, 288, 338, 392, 450, 512, 578, 648, 722]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr)\n",
+    "print(double(arr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2: 'two', 'two': 100, 3: [1, 2, 4], '*': {'sub-1': 1, 'sub-2': 2}, 4: {'a': 1, 'b': 5}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "two\n",
+      "two\n",
+      "100\n",
+      "3\n",
+      "[1, 2, 4]\n",
+      "*\n",
+      "{'sub-1': 1, 'sub-2': 2}\n",
+      "4\n",
+      "{'a': 1, 'b': 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in d:\n",
+    "    print(item)\n",
+    "    print(d[item])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'id': 1, 'name': 'person 1'}, {'id': 2, 'name': 'person 2'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(database)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 1, 'name': 'person 1'}"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[item for item in database if item['id'] is 1][0] # \"extract\" the item with id = 1"
    ]
   },
   {
