--- a/Python-Intro.ipynb
+++ b/Python-Intro.ipynb
@@ -526,33 +526,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 129,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'id': 0, 'name': 'Person 0'}, {'id': 1, 'name': 'Person 1'}, {'id': 2, 'name': 'Person 2'}, {'id': 3, 'name': 'Person 3'}, {'id': 4, 'name': 'Person 4'}, {'id': 5, 'name': 'Person 5'}, {'id': 6, 'name': 'Person 6'}, {'id': 7, 'name': 'Person 7'}, {'id': 8, 'name': 'Person 8'}, {'id': 9, 'name': 'Person 9'}]\n"
+     ]
     }
    ],
    "source": [
-    "database = [\n",
-    "    {\n",
-    "        \"id\": 1,\n",
-    "        \"name\": \"person 1\"\n",
-    "    },{\n",
-    "        \"id\": 2,\n",
-    "        \"name\": \"person 2\"\n",
-    "    }\n",
-    "]\n",
-    "\n",
-    "database[0]\n",
-    "database[0]['id']"
+    "database = [{\"id\": i, \"name\": f\"Person {i}\"} for i in range(0,10)]\n",
+    "print(database)"
    ]
   },
   {
@@ -675,22 +662,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'id': 1, 'name': 'person 1'}"
+       "[{'id': 4, 'name': 'Person 4'}]"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[item for item in database if item['id'] is 1][0] # \"extract\" the item with id = 1"
+    "[item for item in database if item['id'] is 4] # \"extract\" the item with id = 1 0, 'name': 'Person 0'},\n",
+    " {'id': 2, 'name': 'Person 2'},\n",
+    " {'id': 4, 'name': 'Person 4'},\n",
+    " {'id': 6, 'name': 'Person 6'},\n",
+    " {'id': 8, 'name': 'Perso"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 0, 'name': 'Person 0'},\n",
+       " {'id': 1, 'name': 'Person 1'},\n",
+       " {'id': 2, 'name': 'Person 2'},\n",
+       " {'id': 3, 'name': 'Person 3'},\n",
+       " {'id': 4, 'name': 'Person 4'},\n",
+       " {'id': 5, 'name': 'Person 5'},\n",
+       " {'id': 6, 'name': 'Person 6'},\n",
+       " {'id': 7, 'name': 'Person 7'},\n",
+       " {'id': 8, 'name': 'Person 8'},\n",
+       " {'id': 9, 'name': 'Person 9'}]"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[item for item in database]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[item for item in database if item['id'] % 2 == 50]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = []\n",
+    "if result is []:\n",
+    "    print(\"result is empty\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " 0, 'name': 'Person 0'},\n",
+    " {'id': 2, 'name': 'Person 2'},\n",
+    " {'id': 4, 'name': 'Person 4'},\n",
+    " {'id': 6, 'name': 'Person 6'},\n",
+    " {'id': 8, 'name': 'Persoresult is []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 182,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " 0, 'name': 'Person 0'},\n",
+    " {'id': 2, 'name': 'Person 2'},\n",
+    " {'id': 4, 'name': 'Person 4'},\n",
+    " {'id': 6, 'name': 'Person 6'},\n",
+    " {'id': 8, 'name': 'Persoresult == []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = \"some text\"\n",
+    "b = \"some text\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a == b 0, 'name': 'Person 0'},\n",
+    " {'id': 2, 'name': 'Person 2'},\n",
+    " {'id': 4, 'name': 'Person 4'},\n",
+    " {'id': 6, 'name': 'Person 6'},\n",
+    " {'id': 8, 'name': 'Perso"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a is b"
    ]
   },
   {
