pandas and plotting

--- a/FuncsAndOOP.ipynb
+++ b/FuncsAndOOP.ipynb
@@ -480,12 +480,14 @@
    "source": [
     "# Classes and OOP\n",
     "\n",
-    "Python does have classes, objects, methods, inheritance, etc!"
+    "Python does have classes, objects, methods, inheritance, etc!\n",
+    "\n",
+    "Important reference: [Python Data Model](https://docs.python.org/3/reference/datamodel.html)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +601,7 @@
        "5"
       ]
      },
-     "execution_count": 238,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     }
