--- a/PlotTypes.ipynb
+++ b/PlotTypes.ipynb
@@ -11,14 +11,20 @@
     "Ordinal/nominal data: rank data, not a unit of measurement, discrete.\n",
     "Not always inter-relationships between different values (different occupations, colors)\n",
     "\n",
+    "### What statistics to look at?\n",
+    "\n",
     "## When to line plot?\n",
     "\n",
     "Series-based data, inter-relationships, temporal relationships.\n",
     "Lines imply a relationship between points\n",
     "\n",
+    "### What statistics to look at?\n",
+    "\n",
     "## When to scatter?\n",
     "\n",
-    "Still scatter with inter-x relationships, but each point doesn't \"follow from\" the last one. The x-values are independent of each other, but are related (e.g. an order). Sampling order doesn't matter."
+    "Still scatter with inter-x relationships, but each point doesn't \"follow from\" the last one. The x-values are independent of each other, but are related (e.g. an order). Sampling order doesn't matter.\n",
+    "\n",
+    "### What statistics to look at?"
    ]
   },
   {
