--- a/Pandas.ipynb
+++ b/Pandas.ipynb
@@ -5879,6 +5879,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 371,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(32561, 18)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "print(adults.values.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
